--- a/src/components/Comments/Comments.css
+++ b/src/components/Comments/Comments.css
@@ -229,26 +229,34 @@
   margin: auto;
   grid-template-columns: 280px 280px 280px;
   gap:62px;
+  margin-top: 85px;
 }
 
 .showCommentsItems > div {
   position: relative;
   width: 280px;
   height: 365px;
-  background-color: #FFF3F3;
+  background-color: #ffffff;
   border-radius: 10px;
   box-shadow:0px 0px 5px 1px rgba(0,0,0,.08); 
 }
 
 .showCommentsItems > div > .showCommentsItemsHolderName{
-  height:45px;
+  height:50px;
+  border: 1px solid rgb(255, 255, 255);
 }
 
 .showCommentsItems > div > .showCommentsItemsHolderName >.showCommentsItemsStudentName{
   margin-top: 15px;
   text-align: center;
   font-size: 20px;
-  color:#909090;
+  color:#464646;
+}
+
+.showCommentsItems > div > .showCommentsItemsHolderName >.showCommentsItemsStudentNameAn{
+  margin-right: 18px;
+  color:#464646;
+  margin-top: 10px;
 }
 
 .showCommentsItems > div > .showCommentsItemsHolderComment{
@@ -274,9 +282,9 @@
 .showCommentsItems > div > .showCommentsItemsHolderIcon{
   display:flex;
   justify-content: space-between;
-  width:50%;
+  width:55%;
   margin: auto;
-  margin-top:25px;
+  margin-top:33px;
 }
 
 .showCommentsItems > div > .showCommentsItemsHolderIcon > div{
