--- a/src/components/Comments/Comments.css
+++ b/src/components/Comments/Comments.css
@@ -222,6 +222,36 @@
 }/*# sourceMappingURL=index.css.map */
 
 
+.commentPleaseLogin{
+  width: 805px;
+  height:100px;
+  background-color: #F3FFF8;
+  margin:150px auto 0 auto;
+  text-align: center;
+  color:#00679D;
+  font-size: 18px;
+  padding-top: 20px;
+  border-radius: 10px;
+  word-spacing: 2px;
+}
+
+
+.commentPleaseLoginBtn{
+  margin:20px auto;
+  position: relative;
+}
+
+.commentPleaseLoginBtn > hr{
+  transform: rotate(90deg);
+  position:absolute;
+  width: 15px;
+  top:10px;
+  right:402px;
+  border-width: 1.5px;
+  border: .75px solid #00ADEF;
+  background-color: #00ADEF;
+}
+
 
 .showCommentsItems{
   display:grid;
@@ -330,6 +360,28 @@
     gap:40px;
     margin-top: 85px;
   }
+
+  .commentPleaseLogin{
+    width: 540px;
+
+    height:100px;
+    margin:70px auto 0 auto;
+    font-size: 16px;
+    padding: 20px 30px;
+    word-spacing: 2px;
+  }
+  
+  
+  .commentPleaseLoginBtn{
+    margin:20px auto;
+    position: relative;
+  }
+  
+  .commentPleaseLoginBtn > hr{
+    width: 15px;
+    top:4px;
+    right:270px;
+  }
 }
 
 @media screen and (max-width: 749px) {
@@ -338,6 +390,26 @@
     grid-template-columns: 280px;
     gap:20px;
     margin-top: 85px;
+  }
+
+  .commentPleaseLogin{
+    width: 280px;
+
+    height:80px;
+    margin:70px auto 0 auto;
+    font-size: 12px;
+  }
+  
+  
+  .commentPleaseLoginBtn{
+    margin:20px auto;
+    position: relative;
+  }
+  
+  .commentPleaseLoginBtn > hr{
+    width: 15px;
+    top:6px;
+    right:139px;
   }
 }
 
