--- a/src/components/MainbarDashboard/MainbarDashboard.css
+++ b/src/components/MainbarDashboard/MainbarDashboard.css
@@ -16,6 +16,7 @@
   box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.08);
   background-color: white;
   display: flex;
+  position: relative;
 }
 
 .MainbarDashboard>.MainbarDashboardActevity>.MainbarDashboardActevityTopic>p {
@@ -24,6 +25,17 @@
   margin-top: 32px;
   font-size: 30px;
   color: #043d72;
+}
+
+.emptyCourses{
+  position: absolute;
+  color:rgb(143, 143, 143);
+  top:25px;
+  left:180px;
+}
+
+.emptyCourses02{
+  display: none;
 }
 
 .MainbarDashboard>.MainbarDashboardActevity>.MainbarDashboardActevityTopic>hr {
@@ -42,6 +54,7 @@
   gap: 20px;
   margin-top: 30px;
   margin-right: 31px;
+  position: relative;
 }
 
 .MainbarDashboard>.MainbarDashboardDate {
@@ -98,6 +111,18 @@
 }
 
 @media screen and (max-width:1262px) {
+
+  .emptyCourses{
+    display:none;
+  }
+  
+  .emptyCourses02{
+    position: absolute;
+    color:rgb(143, 143, 143);
+    top:50px;
+    left:140px;
+    display: block;
+  }
 
   .MainbarDashboard {
     display: grid;
@@ -173,6 +198,16 @@
 
 
 @media screen and (max-width:749px) {
+
+  .emptyCourses02{
+    position: absolute;
+    color:rgb(143, 143, 143);
+    top:80px;
+    left:70px;
+    display: block;
+    text-align: center;
+    font-size:14px;
+  }
 
   .MainbarContainerDashboard {
     height: 675px;
