--- a/src/screens/login/Login.css
+++ b/src/screens/login/Login.css
@@ -63,7 +63,7 @@
     margin-right: 26px;
 }
 
-.loginHolder > .loginInputHolder > form > .loginInputHolderForP{
+.loginHolder > .loginInputHolder > form > div> .loginInputHolderForP{
     font-size: 12px;
     color: #00ADEF;
     margin-right: 36px;
@@ -149,7 +149,7 @@
         margin-right: 26px;
     }
 
-    .loginHolder > .loginInputHolder > form > .loginInputHolderForP{
+    .loginHolder > .loginInputHolder > form > div> .loginInputHolderForP{
         font-size: 10px;
         margin-top: 5px;
         margin-right: 28px;
