--- a/src/components/Compair/Compair.css
+++ b/src/components/Compair/Compair.css
@@ -51,3 +51,10 @@
         flex-direction: column;
     }
 }
+
+.theBagIsEmpty{
+    color:rgb(143, 143, 143);
+    width:250px;
+    text-align: center;
+    margin:50px auto 0 auto;
+}
