--- a/src/components/common/PopUp/index.css
+++ b/src/components/common/PopUp/index.css
@@ -4,7 +4,7 @@
 
 
 .popUp .MuiDialog-container .MuiPaper-root {
-    min-width: 160px !important;
+    min-width: 160px;
 }
 
 .muirtl-bdhsul-MuiTypography-root-MuiDialogTitle-root {
