--- a/src/components/Comments/Comments.css
+++ b/src/components/Comments/Comments.css
@@ -1,6 +1,6 @@
 .comments {
-  margin-top: -1rem !important;
-  width: 100%;
+  margin-top: 3rem !important;
+  width: 70%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -9,10 +9,13 @@
 }
 
 .replayAdder>.MuiDialog-container>.MuiPaper-root {
-  width: 500px !important;
-  min-width: 200px !important;
+  width: 700px !important;
 }
 
+.replayAdder .MuiDialog-container .MuiPaper-root .MuiDialogContent-root .showReplay .comments {
+  width: 100% !important;
+  margin-top: -1rem !important;
+}
 
 @media screen and (max-width: 1262px) {
   .comments {
@@ -22,7 +25,11 @@
 
 @media screen and (max-width: 60rem) {
   .comments {
-    width: 100%;
+    width: 70%;
+  }
+
+  .replayAdder .MuiDialog-container .MuiPaper-root .MuiDialogContent-root .showReplay .comments {
+    width: 100% !important;
   }
 }
 
@@ -50,7 +57,7 @@
     margin-bottom: 2rem;
   }
 
-  .addNewComment .MuiPaper-root .MuiButton-root {
+  .replayAdder .MuiDialog-container .MuiPaper-root .MuiDialogContent-root .showReplay .comments .addNewComment .MuiPaper-root .MuiButton-root {
     font-size: 9px;
   }
 }
@@ -64,10 +71,14 @@
 .comments .addNewComment .MuiCard-root {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 70%;
   margin: auto;
   box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, .08);
   border-radius: 10px;
+}
+
+.replayAdder .MuiDialog-container .MuiPaper-root .MuiDialogContent-root .showReplay .comments .addNewComment .MuiCard-root {
+  width: 100%;
 }
 
 @media screen and (max-width: 60rem) {
