--- a/src/components/HomeIntro/HomeIntro.css
+++ b/src/components/HomeIntro/HomeIntro.css
@@ -96,6 +96,23 @@ div.introContainer>.btn-home>button.infoBut {
 
 }
 
+.popUpSearch .MuiDialog-container .MuiPaper-root .MuiDialogContent-root .inputContainer {
+    margin-top: 21px;
+}
+
+.popUpSearch .MuiDialog-container .MuiPaper-root .MuiDialogContent-root .MuiBox-root .inputContainer .MuiFormControl-root,
+.popUpSearch .MuiDialog-container .MuiPaper-root .MuiDialogContent-root .MuiBox-root .inputContainer {
+    width: 100%;
+}
+
+.popUpSearch .MuiDialog-container .MuiPaper-root .MuiDialogContent-root .MuiBox-root .inputContainer .MuiFormControl-root .MuiInputBase-root>input {
+    padding: 0px;
+    padding-bottom: 10px;
+}
+
+.popUpSearch .MuiDialog-container .MuiPaper-root .MuiDialogContent-root .inputContainer {
+    height: auto !important;
+}
 
 
 @media screen and (max-width:1262px) {
