pop up style search

--- a/src/components/common/PopUp/index.css
+++ b/src/components/common/PopUp/index.css
@@ -15,3 +15,9 @@
 .popUp .MuiDialog-container .muirtl-1t1j96h-MuiPaper-root-MuiDialog-paper{
     width: 400px;
 }
+
+@media screen and (max-width:749px) {
+    .MuiPaper-root .MuiTypography-h6{
+        font-size: 13px;
+    }
+}
