--- a/src/components/CommentsCour/CommentsCour.css
+++ b/src/components/CommentsCour/CommentsCour.css
@@ -1,4 +1,4 @@
-.comments {
+.commentsCour {
   margin-top: 3rem !important;
   width: 70%;
   display: flex;
@@ -12,63 +12,48 @@
   width: 700px !important;
 }
 
-.replayAdder .MuiDialog-container .MuiPaper-root .MuiDialogContent-root .showReplay .comments {
+.replayAdder .MuiDialog-container .MuiPaper-root .MuiDialogContent-root .showReplay .commentsCour {
   width: 100% !important;
   margin-top: -1rem !important;
 }
 
 @media screen and (max-width: 1262px) {
-  .comments {
+  .commentsCour {
     width: 100%;
   }
 }
 
 @media screen and (max-width: 60rem) {
-  .comments {
+  .commentsCour {
     width: 70%;
   }
 
-  .replayAdder .MuiDialog-container .MuiPaper-root .MuiDialogContent-root .showReplay .comments {
+  .replayAdder .MuiDialog-container .MuiPaper-root .MuiDialogContent-root .showReplay .commentsCour {
     width: 100% !important;
   }
 }
 
 @media screen and (max-width: 749px) {
-  .comments {
+  .commentsCour {
     width: 100%;
   }
 }
 
-.comments p {
-  font-size: 25px;
-  font-family: bakh;
-  color: #043D72;
-  border-right: 5px solid #FDEA00;
-  width: 160px;
-  height: 30px;
-  text-align: center;
-}
 
 @media (max-width: 749px) {
-  .comments p {
-    font-size: 20px;
-    width: 120px;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-  }
 
-  .replayAdder .MuiDialog-container .MuiPaper-root .MuiDialogContent-root .showReplay .comments .addNewComment .MuiPaper-root .MuiButton-root {
+  .replayAdder .MuiDialog-container .MuiPaper-root .MuiDialogContent-root .showReplay .commentsCour .addNewComment .MuiPaper-root .MuiButton-root {
     font-size: 9px;
   }
 }
 
-.comments .addNewComment {
+.commentsCour .addNewComment {
   margin-top: 2rem !important;
   width: 100%;
   margin: auto;
 }
 
-.comments .addNewComment .MuiCard-root {
+.commentsCour .addNewComment .MuiCard-root {
   display: flex;
   flex-direction: column;
   width: 70%;
@@ -77,17 +62,17 @@
   border-radius: 10px;
 }
 
-.replayAdder .MuiDialog-container .MuiPaper-root .MuiDialogContent-root .showReplay .comments .addNewComment .MuiCard-root {
+.replayAdder .MuiDialog-container .MuiPaper-root .MuiDialogContent-root .showReplay .commentsCour .addNewComment .MuiCard-root {
   width: 100%;
 }
 
 @media screen and (max-width: 60rem) {
-  .comments .addNewComment .MuiCard-root {
+  .commentsCour .addNewComment .MuiCard-root {
     width: 100%;
   }
 }
 
-.comments .addNewComment .MuiCard-root span {
+.commentsCour .addNewComment .MuiCard-root span {
   color: #808080;
   padding: 1rem;
   font-size: 23px;
@@ -95,21 +80,21 @@
 }
 
 @media screen and (max-width: 1262px) {
-  .comments .addNewComment .MuiCard-root span {
+  .commentsCour .addNewComment .MuiCard-root span {
     font-size: 20px;
   }
 }
 
-.comments .addNewComment .MuiCard-root .TextComment {
+.commentsCour .addNewComment .MuiCard-root .TextComment {
   padding: 1rem;
   padding-top: 0px;
 }
 
-.comments .addNewComment .MuiCard-root .TextComment .MuiTextField-root {
+.commentsCour .addNewComment .MuiCard-root .TextComment .MuiTextField-root {
   width: 100%;
 }
 
-.comments .addNewComment .MuiCard-root .MuiButton-contained {
+.commentsCour .addNewComment .MuiCard-root .MuiButton-contained {
   width: 25%;
   font-family: bakh;
   align-self: center;
@@ -118,29 +103,29 @@
 }
 
 @media screen and (max-width: 1262px) {
-  .comments .addNewComment .MuiCard-root .MuiButton-contained {
+  .commentsCour .addNewComment .MuiCard-root .MuiButton-contained {
     margin-top: 1rem;
   }
 }
 
-.comments .showComments {
+.commentsCour .showcommentsCour {
   width: 70%;
   margin: auto;
   margin-top: 2rem;
 }
 
 @media screen and (max-width: 60rem) {
-  .comments .showComments {
+  .commentsCour .showcommentsCour {
     width: 100%;
   }
 }
 
-.comments .showComments .firstComment {
+.commentsCour .showcommentsCour .firstComment {
   display: flex;
   margin-top: 1rem;
 }
 
-.comments .showComments .firstComment .MuiCard-root {
+.commentsCour .showcommentsCour .firstComment .MuiCard-root {
   padding-top: 0.5rem;
   padding-right: 0.5rem;
   width: 100%;
@@ -149,19 +134,19 @@
   border-radius: 10px;
 }
 
-.comments .showComments .firstComment .MuiCard-root header {
+.commentsCour .showcommentsCour .firstComment .MuiCard-root header {
   display: flex;
   color: #979797;
   justify-content: space-between;
 }
 
 @media screen and (max-width: 749px) {
-  .comments .showComments .firstComment .MuiCard-root header {
+  .commentsCour .showcommentsCour .firstComment .MuiCard-root header {
     font-size: 12px;
   }
 }
 
-.comments .showComments .firstComment .MuiCard-root header .name-date {
+.commentsCour .showcommentsCour .firstComment .MuiCard-root header .name-date {
   display: flex;
   height: -webkit-fit-content;
   height: -moz-fit-content;
@@ -171,15 +156,15 @@
   font-size: 15px;
 }
 
-.comments .showComments .firstComment .MuiCard-root header .name-date .MuiDivider-root {
+.commentsCour .showcommentsCour .firstComment .MuiCard-root header .name-date .MuiDivider-root {
   padding-right: 0.5rem;
 }
 
-.comments .showComments .firstComment .MuiCard-root header .name-date div:nth-child(3) {
+.commentsCour .showcommentsCour .firstComment .MuiCard-root header .name-date div:nth-child(3) {
   margin-right: 0.5rem;
 }
 
-.comments .showComments .firstComment .MuiCard-root header .action {
+.commentsCour .showcommentsCour .firstComment .MuiCard-root header .action {
   width: 114px;
   display: flex;
   justify-content: space-around;
@@ -187,64 +172,64 @@
   margin-left: 0.5rem;
 }
 
-.comments .showComments .firstComment .MuiCard-root .textOfComment {
+.commentsCour .showcommentsCour .firstComment .MuiCard-root .textOfComment {
   padding: 0.5rem;
   font-size: 16px;
   color: #757575;
 }
 
 @media screen and (max-width: 749px) {
-  .comments .showComments .firstComment .MuiCard-root .textOfComment {
+  .commentsCour .showcommentsCour .firstComment .MuiCard-root .textOfComment {
     font-size: 12px;
   }
 }
 
-.comments .showComments .replyComment {
+.commentsCour .showcommentsCour .replyComment {
   margin-top: 1rem;
   width: 87%;
   margin-right: auto;
 }
 
 @media screen and (max-width: 749px) {
-  .comments .showComments .replyComment {
+  .commentsCour .showcommentsCour .replyComment {
     width: 80% !important;
   }
 }
 
 @media screen and (max-width: 1262px) {
-  .comments .showComments .replyComment {
+  .commentsCour .showcommentsCour .replyComment {
     width: 85%;
   }
 }
 
-.comments .showComments .replyComment .MuiCard-root {
+.commentsCour .showcommentsCour .replyComment .MuiCard-root {
   display: flex;
   box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, .08);
   border-radius: 10px;
 }
 
-.comments .showComments .replyComment .avatar {
+.commentsCour .showcommentsCour .replyComment .avatar {
   padding: 0.5rem;
 }
 
-.comments .showComments .replyComment .action-textComment {
+.commentsCour .showcommentsCour .replyComment .action-textComment {
   width: 89%;
   padding-top: 0.5rem;
 }
 
-.comments .showComments .replyComment .action-textComment header {
+.commentsCour .showcommentsCour .replyComment .action-textComment header {
   display: flex;
   color: #979797;
   justify-content: space-between;
 }
 
 @media screen and (max-width: 749px) {
-  .comments .showComments .replyComment .action-textComment header {
+  .commentsCour .showcommentsCour .replyComment .action-textComment header {
     font-size: 12px;
   }
 }
 
-.comments .showComments .replyComment .action-textComment header .name-date {
+.commentsCour .showcommentsCour .replyComment .action-textComment header .name-date {
   display: flex;
   height: -webkit-fit-content;
   height: -moz-fit-content;
@@ -253,15 +238,15 @@
   font-size: 15px;
 }
 
-.comments .showComments .replyComment .action-textComment header .name-date .MuiDivider-root {
+.commentsCour .showcommentsCour .replyComment .action-textComment header .name-date .MuiDivider-root {
   padding-right: 0.5rem;
 }
 
-.comments .showComments .replyComment .action-textComment header .name-date div:nth-child(3) {
+.commentsCour .showcommentsCour .replyComment .action-textComment header .name-date div:nth-child(3) {
   margin-right: 0.5rem;
 }
 
-.comments .showComments .replyComment .action-textComment header .action {
+.commentsCour .showcommentsCour .replyComment .action-textComment header .action {
   width: 114px;
   display: flex;
   justify-content: space-around;
@@ -269,14 +254,14 @@
   margin-left: 0.5rem;
 }
 
-.comments .showComments .replyComment .action-textComment .textOfComment {
+.commentsCour .showcommentsCour .replyComment .action-textComment .textOfComment {
   padding: 0.5rem;
   font-size: 16px;
   color: #757575;
 }
 
 @media screen and (max-width: 749px) {
-  .comments .showComments .replyComment .action-textComment .textOfComment {
+  .commentsCour .showcommentsCour .replyComment .action-textComment .textOfComment {
     font-size: 12px;
   }
 }
@@ -315,7 +300,7 @@
 }
 
 
-.showCommentsItems {
+.showcommentsCourItems {
   display: grid;
   width: 965px;
   margin: auto;
@@ -324,7 +309,7 @@
   margin-top: 85px;
 }
 
-.showCommentsItems>div {
+.showcommentsCourItems>div {
   position: relative;
   width: 280px;
   height: 365px;
@@ -333,29 +318,29 @@
   box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, .08);
 }
 
-.showCommentsItems>div>.showCommentsItemsHolderName {
+.showcommentsCourItems>div>.showcommentsCourItemsHolderName {
   height: 50px;
   border: 1px solid rgb(255, 255, 255);
 }
 
-.showCommentsItems>div>.showCommentsItemsHolderName>.showCommentsItemsStudentName {
+.showcommentsCourItems>div>.showcommentsCourItemsHolderName>.showcommentsCourItemsStudentName {
   margin-top: 15px;
   text-align: center;
   font-size: 20px;
   color: #464646;
 }
 
-.showCommentsItems>div>.showCommentsItemsHolderName>.showCommentsItemsStudentNameAn {
+.showcommentsCourItems>div>.showcommentsCourItemsHolderName>.showcommentsCourItemsStudentNameAn {
   margin-right: 18px;
   color: #464646;
   margin-top: 10px;
 }
 
-.showCommentsItems>div>.showCommentsItemsHolderComment {
+.showcommentsCourItems>div>.showcommentsCourItemsHolderComment {
   height: 75px;
 }
 
-.showCommentsItems>div>.showCommentsItemsHolderComment>.showCommentsItemsStudentComment {
+.showcommentsCourItems>div>.showcommentsCourItemsHolderComment>.showcommentsCourItemsStudentComment {
   text-align: center;
   font-size: 16px;
   color: #757575;
@@ -364,14 +349,14 @@
   margin-top: 0;
 }
 
-.showCommentsItems>div>hr {
+.showcommentsCourItems>div>hr {
   width: 85%;
   border: .75px solid #cfcfcf;
   background-color: #cfcfcf;
   margin-top: 25px;
 }
 
-.showCommentsItems>div>.showCommentsItemsHolderIcon {
+.showcommentsCourItems>div>.showcommentsCourItemsHolderIcon {
   display: flex;
   justify-content: space-between;
   width: 55%;
@@ -379,35 +364,35 @@
   margin-top: 33px;
 }
 
-.showCommentsItems>div>.showCommentsItemsHolderIcon>div {
+.showcommentsCourItems>div>.showcommentsCourItemsHolderIcon>div {
   width: 30px;
   height: 30px;
   background-color: #043D72;
   cursor: pointer;
 }
 
-.showCommentsItems>div>.showCommentsItemsHolderIcon>div:nth-child(1) {
+.showcommentsCourItems>div>.showcommentsCourItemsHolderIcon>div:nth-child(1) {
   background: url('./../../assets/images/CourseDetails/block.png');
   background-repeat: no-repeat;
   background-size: 23px;
   background-position: center;
 }
 
-.showCommentsItems>div>.showCommentsItemsHolderIcon>div:nth-child(2) {
+.showcommentsCourItems>div>.showcommentsCourItemsHolderIcon>div:nth-child(2) {
   background: url('./../../assets/images/CourseDetails/answer.png');
   background-repeat: no-repeat;
   background-size: 25px;
   background-position: center;
 }
 
-.showCommentsItems>div>.showCommentsItemsHolderIcon>div:nth-child(3) {
+.showcommentsCourItems>div>.showcommentsCourItemsHolderIcon>div:nth-child(3) {
   background: url('./../../assets/images/CourseDetails/dislike.png');
   background-repeat: no-repeat;
   background-size: 25px;
   background-position: center;
 }
 
-.showCommentsItems>div>.showCommentsItemsHolderIcon>div:nth-child(4) {
+.showcommentsCourItems>div>.showcommentsCourItemsHolderIcon>div:nth-child(4) {
   background: url('./../../assets/images/CourseDetails/like.png');
   background-repeat: no-repeat;
   background-size: 25px;
@@ -416,7 +401,7 @@
 
 
 @media screen and (max-width: 1262px) {
-  .showCommentsItems {
+  .showcommentsCourItems {
     width: 600px;
     grid-template-columns: 280px 280px;
     gap: 40px;
@@ -447,7 +432,7 @@
 }
 
 @media screen and (max-width: 749px) {
-  .showCommentsItems {
+  .showcommentsCourItems {
     width: 280px;
     grid-template-columns: 280px;
     gap: 20px;
@@ -472,5 +457,53 @@
     width: 15px;
     top: 6px;
     right: 139px;
+  }
+}
+
+
+
+
+
+
+
+
+.commentsCourTitleHolder{
+  width:70%;
+  display: flex;
+  margin:30px auto;
+  justify-content: space-between;
+  height:70px;
+}
+
+.commentsCourTitleHolder > p{
+  transition: .3s;
+  text-align: center;
+  width:45%;
+  font-size: 25px;
+  font-family: bakh;
+  height:40px;
+}
+
+@media screen and (max-width: 1262px) {
+  .commentsCourTitleHolder > p{
+    text-align: center;
+    width:45%;
+    font-size: 20px;
+    font-family: bakh;
+    color: #043D72;
+    padding-bottom:5px;
+    border-bottom: 2px solid #e5e5e5;
+  }
+}
+
+@media screen and (max-width: 749px) {
+  .commentsCourTitleHolder > p{
+    text-align: center;
+    width:45%;
+    font-size: 18px;
+    font-family: bakh;
+    color: #043D72;
+    padding-bottom:5px;
+    border-bottom: 2px solid #e5e5e5;
   }
 }
