--- a/src/components/CoursesContainer/CoursesContainer.css
+++ b/src/components/CoursesContainer/CoursesContainer.css
@@ -8,6 +8,7 @@ div.c21 {
   width: 285px;
   margin-bottom: 55px;
   margin-top: 100px;
+  position: relative;
 }
 
 .CardIncoursesContainer {
@@ -50,5 +51,34 @@ div.c21 {
     gap: 32px;
     margin-top: 50px;
     margin-bottom: 65px;
+  }
+}
+
+.CoursesSearchIcon{
+  width:50px;
+  height: 50px;
+  position:absolute;
+  right:-403px;
+  top:140px;
+  border-radius: 5px;
+  cursor:pointer;
+  box-shadow: 0px 0px 8px 1px rgba(0,0,0,.05);
+  background: url('./../../assets/images/Filter/search.png');
+  background-size:30px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+@media screen and (max-width: 1262px) {
+  .CoursesSearchIcon{
+    right:-220px;
+    top:140px;
+  }
+}
+
+@media screen and (max-width: 749px) {
+  .CoursesSearchIcon{
+    right:-72px;
+    top:140px;
   }
 }
