--- a/src/components/common/avatar/index.css
+++ b/src/components/common/avatar/index.css
@@ -68,11 +68,14 @@
   right: 18px;
 }
 
+
+
 @media screen and (max-width: 1262px) {
   .md-avatar {
     width: 4rem !important;
     height: 4rem !important;
   }
+
   .sidebarContainerInfoPictureIcon {
     width: 20px;
     height: 20px;
@@ -80,8 +83,11 @@
     border-radius: 50%;
     right: 15px;
   }
+
   .xs-avatar {
     width: 2rem !important;
     height: 2rem !important;
   }
-}/*# sourceMappingURL=index.css.map */
+}
+
+/*# sourceMappingURL=index.css.map */
