--- a/src/components/UploadPhoto/index.css
+++ b/src/components/UploadPhoto/index.css
@@ -16,7 +16,7 @@
   margin-top: 10px;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 100%;
 }
 
