--- a/src/components/UploadPhoto/index.css
+++ b/src/components/UploadPhoto/index.css
@@ -13,10 +13,10 @@
 }
 
 .btnEditPhoto {
-  margin-top: 10px;
+  margin-top: 30px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
 }
 
