--- a/src/components/CardInCourses/CardInCourses.css
+++ b/src/components/CardInCourses/CardInCourses.css
@@ -60,17 +60,19 @@ div.cardIncoursesCardCard > .cardIncoursesCardMedia{
 }
 
 .cardIncoursesCardCard > .cardInCoursesRatNumHolder > .cardInCoursesRate{
-    background: url('./../../assets/images/CoursesCard/star.png');
+    background: url('./../../assets/images/CoursesCard/clock.png');
     background-size:20px;
     background-position: center;
     background-repeat: no-repeat;
+    font-family: bakh;
 }
 
 .cardIncoursesCardCard > .cardInCoursesRatNumHolder > .cardInCoursesNum{
-    background: url('./../../assets/images/CoursesCard/man.png');
+    background: url('./../../assets/images/CoursesCard/user.png');
     background-size:20px;
     background-position: center;
     background-repeat: no-repeat;
+    font-family: bakh;
 }
 
 
