--- a/src/components/CoursesCard/CoursesCard.css
+++ b/src/components/CoursesCard/CoursesCard.css
@@ -62,17 +62,19 @@ div.coursesCardCard > .coursesCardMedia{
 }
 
 .coursesCardCard > .coursesCardRatNumHolder > .coursesCardRate{
-    background: url('./../../assets/images/CoursesCard/star.png');
+    background: url('./../../assets/images/CoursesCard/clock.png');
     background-size:20px;
     background-position: center;
     background-repeat: no-repeat;
+    font-family: bakh;
 }
 
 .coursesCardCard > .coursesCardRatNumHolder > .coursesCardNum{
-    background: url('./../../assets/images/CoursesCard/man.png');
+    background: url('./../../assets/images/CoursesCard/user.png');
     background-size:20px;
     background-position: center;
     background-repeat: no-repeat;
+    font-family: bakh;
 }
 
 /* Mobile Responsive */
